[package]
name = "stun"
version = "0.1.0"
authors = ["Sigmund Granaas <sigmundsgranaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full", "tracing", "net", "macros"] }
